--- a/client/android/local.properties
+++ b/client/android/local.properties
@@ -1,3 +1,3 @@
-sdk.dir=C:\\Users\\thevz\\AppData\\Local\\Android\\Sdk
+sdk.dir=C:\\Users\\thevz\\scoop\\apps\\android-sdk\\current
 flutter.sdk=C:\\Programs\\Flutter\\flutter_windows_v0.8.2-beta\\flutter
 flutter.buildMode=debug
