--- a/client/analysis_options.yaml
+++ b/client/analysis_options.yaml
@@ -38,6 +38,8 @@ analyzer:
     # see https://github.com/dart-lang/sdk/issues/28463
     - "lib/i18n/stock_messages_*.dart"
     - "lib/src/http/**"
+    - "lib/chat_view/api/v1/**"
+    - "**data.g.dart"
 
 linter:
   rules:
