--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -8,7 +8,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -24,12 +25,15 @@ dependencies:
   #video_player: ^0.10.2+3
   numberpicker: ^1.1.0
   material_design_icons_flutter: ^3.2.4495
+  flutter_sheet_localization: ^1.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.7.1
   hive_generator: ^0.5.2
   json_serializable: ^3.2.3
+  flutter_sheet_localization_generator: ^1.0.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
