--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -1,7 +1,7 @@
 name: com.winwisely99.app
 description: Demonstrates how to use the News module.
 publish_to: "none"
-
+author: com.winwisely99.app
 environment:
   sdk: ">=2.3.0 <3.0.0"
 
@@ -12,7 +12,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  dash_chat: ^1.0.8
   grpc: ^2.1.2
   protobuf: ^1.0.0
   intl: ^0.15.8
@@ -24,6 +23,10 @@ dependencies:
   #video_player: ^0.10.2+3
   numberpicker: ^1.1.0
   material_design_icons_flutter: ^3.2.4495
+  flutter_parsed_text: ^1.1.0
+  uuid: ^2.0.1
+  transparent_image: ^1.0.0
+  dash_chat: ^1.0.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
