--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ build/
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
 
+client/.flutter-plugins
+
+
 # Directory created by dartdoc
 # If you don't generate documentation locally you can remove this line.
 doc/api/
