--- a/client/Makefile
+++ b/client/Makefile
@@ -281,14 +281,35 @@ flu-desk-dist-unzip:
 flu-mob-run: ## flu-mob-run
 	cd $(SAMPLE_FSPATH) && flutter run -d all
 
+
+
+
 flu-web-config:
-	flutter channel dev
-	flutter upgrade
+	# flutter channel ?
+	#flutter channel dev
+	#flutter upgrade
+
 	flutter config --enable-web
-flu-web-run:
+	# turn off any desktop
+	flutter config --no-enable-linux-desktop
+	flutter config --no-enable-macos-desktop
+	flutter config --no-enable-windows-desktop
+flu-web-create: flu-web-config
+	# works 
+	# make sure using new dir.
+	mkdir -p $(SAMPLE_FSPATH)
+	cd $(SAMPLE_FSPATH) && flutter create --web .
+flu-web-run: flu-web-config ## flu-web-run
+	# works
+	# Reload works too :)
 	cd $(SAMPLE_FSPATH) && flutter run -d chrome
-flu-web-build:
-	cd $(SAMPLE_FSPATH) && flutter build web
+flu-web-build: flu-web-config
+	# works :)
+	cd $(SAMPLE_FSPATH) && flutter build web --release
+flu-web-test: flu-web-config
+	# works :)
+	cd $(SAMPLE_FSPATH) && flutter test --platform=chrome
+
 ### i18n
 
 #SAMPLE=keyboard_event
