--- a/.github/workflows/web-dev.yaml
+++ b/.github/workflows/web-dev.yaml
@@ -6,23 +6,12 @@ on:
 jobs:
   build:
     name: Build Web
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '12.x'
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '1.9.1+hotfix.2'
-          channel: 'stable'
-      - name: Upgrade flutter
-        run: |
-          flutter channel master
-          flutter upgrade
+          channel: 'master'
       - name: Build web package
         run: |
           cd ./client
@@ -33,7 +22,7 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: web-build
-          path: build/web
+          path: ./client/build/web
   deploy:
     name: Deploy
     needs: build
