--- a/.github/workflows/android-deploy.yml
+++ b/.github/workflows/android-deploy.yml
@@ -1,5 +1,5 @@
-on: push
 name: Test, Build and Release apk
+on: push
 jobs:
   build:
     name: Build APK
@@ -11,19 +11,19 @@ jobs:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-        flutter-version: '1.7.8+hotfix.4'
+        channel: 'master'
     - name: Install packages
-        run: |
-          cd ./client
-          flutter pub get
+      run: |
+        cd ./client
+        flutter pub get
     - name: Unit test
-        run: |
-          cd ./client
-          flutter test
+      run: |
+        cd ./client
+        flutter test
     - name: Build android
-        run: |
-          cd ./client
-          flutter build apk --debug --split-per-abi
+      run: |
+        cd ./client
+        flutter build apk --debug --split-per-abi
     - name: Push APK to Releases
       uses: ncipollo/release-action@v1
       with:
