--- a/.github/workflows/web-dev.yaml
+++ b/.github/workflows/web-dev.yaml
@@ -11,7 +11,8 @@ jobs:
       - uses: actions/checkout@v1
       - uses: subosito/flutter-action@v1
         with:
-          channel: 'master'
+          flutter-version: '1.9.1+hotfix.2'
+          channel: 'stable'
       - name: Build web package
         run: |
           cd ./client
