--- a/.github/workflows/web-dev.yaml
+++ b/.github/workflows/web-dev.yaml
@@ -11,8 +11,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '1.9.1+hotfix.2'
-          channel: 'stable'
+          channel: 'dev'
       - name: Build web package
         run: |
           cd ./client
