--- a/.github/workflows/web-dev.yaml
+++ b/.github/workflows/web-dev.yaml
@@ -17,7 +17,7 @@ jobs:
           cd ./client
           flutter pub get
           flutter config --enable-web
-          flutter build web
+          flutter build web --release
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
