--- a/.github/workflows/web-dev.yaml
+++ b/.github/workflows/web-dev.yaml
@@ -40,4 +40,4 @@ jobs:
           args: deploy --only hosting --public web-build
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          PROJECT_ID: default
+          PROJECT_ID: winwisely99-main-master
