--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   device_preview: ^0.2.6
   avatar_glow: ^1.1.0
   font_awesome_flutter: ^8.5.0
+  responsive_scaffold: ^1.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -57,6 +58,7 @@ flutter:
     - assets/mockData/conversations/
     - assets/mockData/news/
     - assets/mockData/users/
+    - assets/icon/
   #  - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
