--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   avatar_glow: ^1.1.0
   font_awesome_flutter: ^8.5.0
   responsive_scaffold: ^1.1.1
+  flutter_markdown: ^0.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
