--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   responsive_scaffold: ^1.1.1
   flutter_markdown: ^0.3.0
+  package_info: ^0.4.0+12
 dev_dependencies:
   flutter_test:
     sdk: flutter
