--- a/.github/workflows/web-dev.yaml
+++ b/.github/workflows/web-dev.yaml
@@ -8,8 +8,10 @@ jobs:
     name: Build Web
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: subosito/flutter-action@v1
+      - name: Checkout code
+        uses: actions/checkout@v1
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v1 # https://github.com/subosito/flutter-action
         with:
           channel: 'dev'
       - name: Build web package
@@ -19,7 +21,7 @@ jobs:
           flutter config --enable-web
           flutter build web --release
       - name: Archive Production Artifact
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v1 # https://github.com/actions/upload-artifact
         with:
           name: web-build
           path: ./client/build/web
@@ -29,9 +31,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@master
+        uses: actions/checkout@v1
       - name: Download Artifact
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v1 # https://github.com/actions/download-artifact
         with:
           name: web-build
       - name: Deploy to Firebase
