--- a/.github/workflows/web-dev.yaml
+++ b/.github/workflows/web-dev.yaml
@@ -37,7 +37,7 @@ jobs:
         with:
           name: web-build
       - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
+        uses: w9jds/firebase-action@v1.2.0 # https://github.com/w9jds/firebase-action
         with:
           args: deploy --only hosting --public web-build
         env:
