CI: firebase local deploy

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -87,3 +87,7 @@ coverage/
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
+
+# Firebase Public folder
+.firebase
+public/
