--- a/packages/mod-ion/ion/cloudwebrtc/Dockerfile-islb
+++ b/packages/mod-ion/ion/cloudwebrtc/Dockerfile-islb
@@ -1,11 +1,18 @@
 FROM golang:1.13
 
-RUN mkdir /app
-
-COPY . /app
+RUN GOPATH=`pwd` && go get -v -d github.com/cloudwebrtc/ion/...
 
 WORKDIR /app
 
-RUN go build -o islb ./islb/main.go
+RUN go build -o cloudwebrtc-islb ${GOPATH}/src/github.com/cloudwebrtc/ion/islb/main.go
 
-ENTRYPOINT ["/app/islb", "-c=/app/conf/islb.toml"]
+RUN mkdir configs
+
+RUN cp ${GOPATH}/src/github.com/cloudwebrtc/ion/conf/islb.toml ./configs
+
+# generate key.pem and cert.pem using https://github.com/FiloSottile/mkcert 
+COPY ./key.pem ./configs/
+
+COPY ./cert.pem ./configs/
+
+ENTRYPOINT ["./cloudwebrtc-islb", "-c=./configs/islb.toml"]
