--- a/packages/mod-ion/ion/pion/Dockerfile-ion
+++ b/packages/mod-ion/ion/pion/Dockerfile-ion
@@ -1,11 +1,18 @@
 FROM golang:1.13
 
-RUN mkdir /app
-
-COPY . /app
+RUN GOPATH=`pwd` && go get -v -d github.com/pion/ion/...
 
 WORKDIR /app
 
-RUN go build -o ion ./cmd/ion/main.go
+RUN go build -o ion ${GOPATH}/src/github.com/pion/ion/cmd/ion/main.go
 
-ENTRYPOINT ["/app/ion", "-c=/app/configs/ion.toml"]
+RUN mkdir configs
+
+RUN cp ${GOPATH}/src/github.com/pion/ion/configs/ion.toml ./configs
+
+# generate key.pem and cert.pem using https://github.com/FiloSottile/mkcert 
+COPY ./key.pem ./configs/
+
+COPY ./cert.pem ./configs/
+
+ENTRYPOINT ["./ion", "-c=./configs/ion.toml"]
