--- a/packages/mod-ion/ion/Makefile
+++ b/packages/mod-ion/ion/Makefile
@@ -19,14 +19,21 @@ export ENABLE_FLUTTER_DESKTOP=true
 GO_OS 		:= $(shell go env GOOS)
 GO_ARCH		:= $(shell go env GOARCH)
 
+GIT_VERSION	:= $(shell git describe --tags)
+
 help:  ## Display this help
 	@awk 'BEGIN {FS = ":.*##"; printf "\nUsage:\n  make \033[36m<target>\033[0m\n"} /^[a-zA-Z_-]+:.*?##/ { printf "  \033[36m%-15s\033[0m %s\n", $$1, $$2 } /^##@/ { printf "\n\033[1m%s\033[0m\n", substr($$0, 5) } ' $(MAKEFILE_LIST)
 
 
-print:
+print: ##print
 	@echo
 	@echo GO_OS: $(GO_OS)
 	@echo GO_OS: $(GO_ARCH)
+	@echo
+
+	@echo
+	@echo GIT_VERSION: $(GIT_VERSION)
+	@echo GIT_OTHER: $(shell git describe --all)
 	@echo
 
 	@echo
