--- a/client/go/packaging/linux-deb/usr/share/applications/com.winwisely99.app.desktop
+++ b/client/go/packaging/linux-deb/usr/share/applications/com.winwisely99.app.desktop
@@ -3,6 +3,6 @@ Version=1.0
 Type=Application
 Terminal=false
 Categories=
-Name=com.winwisely99.app
-Icon=/usr/lib/com.winwisely99.app/assets/icon.png
-Exec=/usr/bin/com.winwisely99.app
+Name=com.whitelabel
+Icon=/usr/lib/com.whitelabel/assets/icon.png
+Exec=/usr/bin/com.whitelabel
