--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -1,7 +1,7 @@
-name: com.winwisely99.app
-description: Demonstrates how to use the News module.
+name: com.whitelabel
+description: Collaboration system.
 publish_to: "none"
-author: com.winwisely99.app
+author: com.whitelabel
 environment:
   sdk: ">=2.3.0 <3.0.0"
 
@@ -10,7 +10,7 @@ dependencies:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Use with the CupertinoIcons class for IOS style icons.
   cupertino_icons: ^0.1.2
   grpc: ^2.1.2
   protobuf: ^1.0.0
