--- a/packages/mod-ion/cloudwebrtc/flutter-webrtc/Makefile
+++ b/packages/mod-ion/cloudwebrtc/flutter-webrtc/Makefile
@@ -4,7 +4,6 @@
 
 # should work on desktop: https://github.com/cloudwebrtc/flutter-webrtc/pull/127
 
-
 LIB_NAME=flutter-webrtc
 LIB=github.com/cloudwebrtc/$(LIB_NAME)
 #LIB_BRANCH=desktop
@@ -13,6 +12,12 @@ LIB_BRANCH=master
 LIB_FSPATH=$(GOPATH)/src/$(LIB)
 
 
+SAMPLE_NAME=example
+SAMPLE_FSPATH=$(LIB_FSPATH)/$(SAMPLE_NAME)
+
+help:  ## Display this help
+	@awk 'BEGIN {FS = ":.*##"; printf "\nUsage:\n  make \033[36m<target>\033[0m\n"} /^[a-zA-Z_-]+:.*?##/ { printf "  \033[36m%-15s\033[0m %s\n", $$1, $$2 } /^##@/ { printf "\n\033[1m%s\033[0m\n", substr($$0, 5) } ' $(MAKEFILE_LIST)
+
 
 print:
 	@echo
@@ -20,6 +25,11 @@ print:
 	@echo LIB: $(LIB)
 	@echo LIB_BRANCH: $(LIB_BRANCH)
 	@echo LIB_FSPATH: $(LIB_FSPATH)
+	@echo
+
+	@echo
+	@echo SAMPLE_NAME: $(SAMPLE_NAME)
+	@echo SAMPLE_FSPATH: $(SAMPLE_FSPATH)
 	@echo
 
 git-print:
@@ -41,25 +51,6 @@ code:
 ###
 
 
-flu-os-dep:
-	# Need master to have Google Desktop and Web available.
-	flutter channel master
-	flutter flutter upgrade
-
-
-# Flutter tools
-MAKE_IMPORT=$(GOPATH)/src/github.com/winwisely99/mod-videoconf/google-flutter-desktop
-
-# Google FLutter Desktop
-export ENABLE_FLUTTER_DESKTOP=true
-SAMPLE=example
-SAMPLE_FSPATH=$(LIB_FSPATH)/$(SAMPLE)
-flu-print:
-	@echo SAMPLE: $(SAMPLE)
-	@echo SAMPLE_FSPATH: $(SAMPLE_FSPATH)
-
-	cd $(MAKE_IMPORT) && $(MAKE) flu-config-print
-
 flu-fix:
 	# https://github.com/flutter/flutter/issues/20685
 
@@ -74,32 +65,33 @@ flu-fix:
 
 	cd $(SAMPLE_FSPATH)/ios && pod install
 
-flu-mob-run:
-	# works for IOS and android
-	cd $(MAKE_IMPORT) && $(MAKE) flu-config-mobile
-	#cd $(LIB_FSPATH) && flutter clean
-	cd $(SAMPLE_FSPATH) && flutter packages get
-	#cd $(SAMPLE_FSPATH) && flutter run -d all
-	#cd $(SAMPLE_FSPATH) && flutter run -d "iPhone SE"
-	cd $(SAMPLE_FSPATH) && flutter run -d all
 
 
-flu-desk-run:
-	cd $(MAKE_IMPORT) && $(MAKE) flu-config-desktop
+### WEB
 
-	cd $(LIB_FSPATH) && flutter clean
-	cd $(SAMPLE_FSPATH) && flutter packages get
-	#cd $(LIB_FSPATH) && flutter pub get
-	cd $(SAMPLE_FSPATH) && flutter run -d "macOS"
+flu-web-config:
+	# flutter channel ?
+	#flutter channel dev
+	#flutter upgrade
 
-
-flu-web-run:
-	cd $(MAKE_IMPORT) && $(MAKE) flu-config-web
-
-	#cd $(LIB_FSPATH) && flutter clean
-	cd $(SAMPLE_FSPATH) && flutter packages get
-	#cd $(LIB_FSPATH) && flutter pub get
+	flutter config --enable-web
+	# turn off any desktop
+	flutter config --no-enable-linux-desktop
+	flutter config --no-enable-macos-desktop
+	flutter config --no-enable-windows-desktop
+flu-web-create: flu-web-config
+	# works 
+	# make sure using new dir.
+	mkdir -p $(SAMPLE_FSPATH)
+	cd $(SAMPLE_FSPATH) && flutter create --web .
+flu-web-run: flu-web-config ## flu-web-run
+	# works
+	# Reload works too :)
 	cd $(SAMPLE_FSPATH) && flutter run -d chrome
-	
-flu-web-open:
-	open http://$(LIB)
+flu-web-build: flu-web-config ## flu-web-build
+	# works :)
+	cd $(SAMPLE_FSPATH) && flutter build web --release
+flu-web-test: flu-web-config ## flu-web-test
+	# works :)
+	cd $(SAMPLE_FSPATH) && flutter test --platform=chrome
+
