--- a/client/android/local.properties
+++ b/client/android/local.properties
@@ -1,3 +1,3 @@
 sdk.dir=/Users/apple/Library/Android/sdk
 flutter.sdk=/Users/apple/workspace/flutter
-flutter.buildMode=debug
+flutter.buildMode=release
