--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_markdown: ^0.3.0
   package_info: ^0.4.0+12
   scroll_to_index: ^1.0.4+1
+  floating_search_bar: ^0.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
