--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   package_info: ^0.4.0+12
   scroll_to_index: ^1.0.4+1
   floating_search_bar: ^0.2.0
+  toast: ^0.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
