--- a/client/ios/Flutter/Generated.xcconfig
+++ b/client/ios/Flutter/Generated.xcconfig
@@ -1,9 +1,9 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/apple/workspace/flutter
-FLUTTER_APPLICATION_PATH=/Users/apple/workspace/go/src/github.com/winwisely99/main/client
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_ROOT=C:\Programs\Flutter\flutter_windows_v0.8.2-beta\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\thevz\go\src\github.com\winwisely99\main\client
+FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
-SYMROOT=${SOURCE_ROOT}/../build/ios
-FLUTTER_FRAMEWORK_DIR=/Users/apple/workspace/flutter/bin/cache/artifacts/engine/ios
+SYMROOT=${SOURCE_ROOT}/../build\ios
+FLUTTER_FRAMEWORK_DIR=C:\Programs\Flutter\flutter_windows_v0.8.2-beta\flutter\bin\cache\artifacts\engine\ios
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
