fix issue 106 - added carousel

--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   scroll_to_index: ^1.0.4+1
   floating_search_bar: ^0.2.0
   toast: ^0.1.5
+  carousel_slider: ^1.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
